--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.15.0",
+		"@googlemaps/js-api-loader": "^1.15.1",
 		"daisyui": "^2.51.5",
 		"motion": "^10.15.5",
 		"sass": "^1.61.0",
